# ATOM

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
atom/mesh/: .isort.cfg  Cargo.toml  README.md  build.rs
atom/mesh/mocker/: Cargo.toml  README.md  app_helpers.rs  lib.rs  main.rs  test_harness.rs
atom/mesh/mocker/fixtures/: grpc_pd_generate.json  grpc_regular_generate.json  grpc_regular_generate_vllm.json  http_pd_chat.json  http_regular_chat.json  http_regular_chat_streaming.json  http_regular_completion.json  http_regular_generate.json
atom/mesh/mocker/scripts/: start_atomesh.sh  start_virtual_requests.sh  start_virtual_workers.sh
atom/mesh/mocker/virtual_workers/: golden_assert.rs  grpc.rs  http.rs  mock_case.rs  mod.rs  pool.rs  replay_case_store.rs  req_metrics.rs  request.rs
atom/mesh/scripts/: README.md  atom_sgl_mesh_xpyd.sh  docker_start.sh  docker_start_vllm.sh  ds_fp4_1p_tp4_2d_tp8_atom_slurm.sh  ds_fp4_1p_tp4_2d_tp8_sglang_slurm.sh  ds_fp4_1p_tp4_2d_tp8_vllm_slurm.sh  ds_fp4_1p_tp8_1d_tp8_atom_slurm.sh  ds_fp4_1p_tp8_1d_tp8_sglang_slurm.sh  ds_fp4_1p_tp8_1d_tp8_vllm_slurm.sh  ds_fp4_1p_tp8_2d_tp8_atom_slurm.sh  ds_fp4_1p_tp8_2d_tp8_sglang_slurm.sh  ds_fp4_1p_tp8_2d_tp8_vllm_slurm.sh  ds_fp4_2p_dp8ep8_1d_dp8ep8_atom_slurm.sh  ds_fp4_2p_dp8ep8_1d_dp8ep8_sglang_slurm.sh  ds_fp4_standalone_dp8ep8_atom_slurm.sh  ds_fp4_standalone_dp8ep8_sglang_slurm.sh  ds_fp4_standalone_tp8_atom_slurm.sh  ds_fp4_standalone_tp8_sglang_slurm.sh  ds_fp4_standalone_tp8_vllm_slurm.sh  ds_fp8_1p_tp4_1d_tp8_slurm.sh  ds_fp8_1p_tp8_1d_tp8_slurm.sh  run_benchmark.sh  run_gsm8k.sh  start_decode.sh  start_prefill.sh  start_router.sh  start_standalone.sh  start_standalone_vllm.sh
atom/mesh/src/: app_context.rs  cliargs.rs  lib.rs  main.rs  middleware.rs  python.rs  server.rs  version.rs
atom/mesh/src/config/: builder.rs  types.rs  validation.rs
atom/mesh/src/core/: circuit_breaker.rs  job_queue.rs  mod.rs  retry.rs  worker.rs  worker_builder.rs  worker_manager.rs  worker_registry.rs  worker_service.rs
atom/mesh/src/core/placement/: mod.rs  planner.rs  policy_apply.rs  registry_adapters.rs  test_support.rs  tests.rs  traits.rs  types.rs
atom/mesh/src/core/steps/: mod.rs  workflow_data.rs  workflow_engines.rs
atom/mesh/src/observability/: events.rs  gauge_histogram.rs  inflight_tracker.rs  logging.rs  mod.rs
atom/mesh/src/observability/metrics/: config.rs  engine_metrics.rs  mesh_metrics.rs  mod.rs  recorder.rs  routes.rs  schema.rs
atom/mesh/src/policies/: cache_aware.rs  factory.rs  mod.rs  prefix_hash.rs  random.rs  registry.rs  round_robin.rs  utils.rs
atom/mesh/src/routers/: atom_standalone.rs  factory.rs  http_pd_router.rs  http_router.rs  mod.rs  router_manager.rs
atom/mesh/src/routers/comm/: conversations.rs  error.rs  header_utils.rs  metrics_utils.rs  mod.rs  parse.rs  persistence_utils.rs  placement_response.rs  tokenize.rs
atom/mesh/src/routers/grpc/: completion_adapter.rs  mod.rs  pd_router.rs  pipeline.rs  router.rs  tests.rs
atom/mesh/src/routers/openai/: mod.rs
atom/mesh/src/routers/prepare/: chat_template.rs  generation_payload.rs  mod.rs  parser_factory_lookup.rs  response_context.rs  stop_decoder_builder.rs  tests.rs  tool_constraints.rs
atom/mesh/src/routers/render/: chat_aggregator.rs  chat_streaming.rs  generate_aggregator.rs  generate_streaming.rs  logprob_conversion.rs  mod.rs  tests.rs
atom/mesh/src/routers/test_mocks/: app_context.rs  dispatcher.rs  mod.rs  parsers.rs  pipeline.rs  planner.rs  registries.rs  responses_context.rs  storage.rs  tokenizer.rs  workers.rs
atom/mesh/src/routers/token_handle/: engine_error.rs  mod.rs  tests.rs  (+3 more)
atom/mesh/tests/: README.md  grpc_engine_drop_tests.rs  grpc_pd_merge_tests.rs  grpc_sse_snapshot.rs  load_guard_raii_test.rs  metrics_aggregator_test.rs  run_atomesh_harness_test.sh
atom/mesh/tests/api/: api_endpoints_test.rs  parser_endpoints_test.rs  responses_api_test.rs
atom/mesh/tests/common/: mock_worker.rs  mod.rs  test_app.rs  test_config.rs
atom/mesh/tests/reliability/: circuit_breaker_test.rs  fault_tolerance_test.rs  rate_limiting_test.rs  retries_test.rs
atom/mesh/tests/routing/: cache_aware_backward_compat_test.rs  header_forwarding_test.rs  load_balancing_test.rs  mod.rs  payload_size_test.rs  pd_routing_test.rs  pd_topology_test.rs  policy_registry_integration.rs  power_of_two_test.rs  test_pd_routing.rs
atom/mesh/tests/security/: auth_test.rs  mod.rs
atom/mesh/tests/spec/: chat_completion.rs  chat_message.rs  mod.rs  responses.rs
(+273 files in other folders)
